<resources>
    <string name="app_name">Music</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_folder_title">My Folders</string>
    <string name="tab_playlist_title">Playlists</string>
    <string name="tab_tracks_title">Tracks</string>
    <string name="song_name">Song Name</string>
    <string name="song_singer">Song Singer</string>
    <string name="folder_background">Song Thumbnail</string>
    <string name="directory_name">Dummy Directory</string>
    <string name="dummy_tracks">106 Tracks</string>
    <string name="home_title">Musica</string>
    <string name="action_overflow">Song Options</string>
    <string name="previous_song">Previous Song</string>
    <string name="play_pause">Play and Pause</string>
    <string name="next_song">Next Song</string>
    <string name="_00_00">00:00</string>
    <string name="empty_current_queue">There are no songs to play</string>
    <string name="clear_now_playing_list_and_play">Clear queue and play</string>
    <string name="add_to_now_playing_list">Add to current queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="create_new">Create New</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="playlist">Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="processing">Processing ...</string>
    <string name="creating_playlist">Creating playlist ...</string>
    <string name="playlist_created">Playlist updated</string>
    <string name="error_in_playlist_creating">Something went wrong</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="updating_playlist">Updating playlist ...</string>
    <string name="rename_playlist">Rename</string>
    <string name="delete_playlist">Delete</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="playlist_renamed">Playlist renamed</string>
    <string name="renaming_playlist">Renaming playlist ...</string>
</resources>
