<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_music_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:orientation="horizontal">

        <com.quovantis.music.customviews.CircleImageView
            android:id="@+id/iv_song_thumbnail"
            style="@style/AppCircularImage"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/space_thumbnail_music_layout"
            android:src="@drawable/music" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/space_music_layout_description">

            <TextView
                android:id="@+id/tv_song_name"
                style="@style/AppTextViewEllipsize"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_small"
                tools:text="@string/song_name" />

            <TextView
                android:id="@+id/tv_song_artist"
                style="@style/AppTextViewEllipsize"
                android:textColor="@color/colorWhite"
                tools:text="@string/song_singer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_previous_song"
                style="@style/AppMusicControlsImageView"
                android:contentDescription="@string/previous_song"
                android:src="@drawable/ic_action_previous" />

            <ImageView
                android:id="@+id/iv_play_pause"
                style="@style/AppMusicControlsImageView"
                android:contentDescription="@string/play_pause"
                android:src="@drawable/ic_action_play" />

            <ImageView
                android:id="@+id/iv_next_song"
                style="@style/AppMusicControlsImageView"
                android:contentDescription="@string/next_song"
                android:src="@drawable/ic_action_next" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>