<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rl_folder_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            style="@style/AppTabLayoutTextView"
            android:text="@string/tab_folder_title" />

        <View
            android:id="@+id/folders_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_layout_bg_highlighter"
            android:layout_alignParentBottom="true"
            android:background="@color/colorTabLayout" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_tracks_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            style="@style/AppTabLayoutTextView"
            android:text="@string/tab_tracks_title" />

        <View
            android:id="@+id/tracks_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_layout_bg_highlighter"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_playlist_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            style="@style/AppTabLayoutTextView"
            android:text="@string/tab_playlist_title" />

        <View
            android:id="@+id/playlist_tab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_layout_bg_highlighter"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary" />
    </RelativeLayout>
</LinearLayout>