<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_rounded_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_playlist_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/rename_playlist"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_medium" />

        <EditText
            android:id="@+id/et_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/playlist"
            android:imeActionId="@+id/done"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/colorBlack" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/size_small" />

            <TextView
                android:id="@+id/tv_rename_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_cancel"
                android:layout_toRightOf="@id/tv_cancel"
                android:padding="@dimen/dp_10"
                android:text="@string/rename_playlist"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/size_small" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>