<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_song_thumbnail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/dp_10"
        android:scaleType="fitXY"
        android:src="@drawable/music" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/dp_10"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_song_name"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:text="Dummy Song"
            android:textColor="@color/colorBlack">
            <requestFocus/>
        </TextView>

        <TextView
            android:id="@+id/tv_song_artist"
            style="@style/AppTextViewEllipsize"
            android:text="Dummy artist"
            android:textColor="@color/colorSongName"
            android:textSize="@dimen/size_x_small">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_previous_song"
            style="@style/AppMusicControlsNotification"
            android:contentDescription="@string/previous_song"
            android:src="@drawable/ic_action_previous"
            android:tint="@color/colorBlack" />

        <ImageView
            android:id="@+id/iv_play_pause"
            style="@style/AppMusicControlsNotification"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/ic_action_play"
            android:tint="@color/colorBlack" />

        <ImageView
            android:id="@+id/iv_next_song"
            style="@style/AppMusicControlsNotification"
            android:contentDescription="@string/next_song"
            android:src="@drawable/ic_action_next"
            android:tint="@color/colorBlack" />

        <ImageView
            android:id="@+id/iv_close_noti"
            style="@style/AppMusicControlsNotification"
            android:src="@drawable/ic_action_remove"
            android:tint="@color/colorBlack" />
    </LinearLayout>
</LinearLayout>